init: readme, module-info.java, gradle scripts